Version 1.0.0
  Enhancements:
  - Support the new foreign data wrapper API introduced in 9.2.
    In PostgreSQL 9.2 and above, WHERE conditions that get pushed down to
    Oracle will not be checked a second time.

  Bugfixes:
  - Fix uninitialized value that caused intermittent server crashes.
    Per report from Bruno Voigt.
  - Rework the handling of errors and transactions.  Now an error should not
    be able to cause an Oracle transaction to be left open.  This also fixes
    a bug introduced in 0.9.3 that prevented Oracle errors from being
    reported as DETAIL message.  Also, all foreign scans in one local query
    will now be executed within one Oracle transaction if they belong to
    the same Oracle session.
  - Rework memory management to exclude memory leaks under all circumstances.

Version 0.9.3 (beta), released 2012-02-07
  Enhancements:
  - Add support for PostgreSQL data type "uuid".

  Bugfixes:
  - After an error message, calls to the foreign server result in this error:
      error connecting to Oracle: OCITransStart failed to start a transaction
      ORA-01453: SET TRANSACTION must be first statement of transaction
    The problem is that the previous transaction was not closed.
    This used to go unnoticed, the problem now becomes manifest because we
    explicitly start a serializable transaction.
    Per reports from Keith Fiske and Bruno Voigt.

Version 0.9.2 (beta), released 2011-12-30
  Bugfixes:
  - Fix handling of Oracle BFILE columns.  This was totally broken; attempts
    to select such columns resulted in the error message
    'ORA-00932: inconsistent datatypes: expected %s got %s'.
    Bug report and patch by Dominique Legendre.
  - Use a serializable transaction in Oracle to make sure that consistent
    data are retrieved during a rescan.

Version 0.9.1 (beta), released 2011-09-14
  Bugfixes:
  - Fix incorrect use of an automatic variable for binding timestamp parameters
    in Oracle.
  - Remove unnecessary lvalue casts.