@@ -3,6 +3,8 @@ Version 1.0.0
   - Support the new foreign data wrapper API introduced in 9.2.
     In PostgreSQL 9.2 and above, WHERE conditions that get pushed down to
     Oracle will not be checked a second time.
+  - Improve error messages for errors during conversion of Oracle data
+    so that the problem can be diagnosed.
 
   Bugfixes:
   - Fix uninitialized value that caused intermittent server crashes.
